# equihash-beam

./: README.md  equihash.go  equihash_test.go
src/: CMakeLists.txt
src/core/: block_crypt.h  difficulty.cpp  difficulty.h
src/pow/: equihash.cpp  equihash.h
src/test/: test.cpp
